[gd_scene load_steps=5 format=3 uid="uid://b1n4l48hpdlvl"]

[ext_resource type="Script" path="res://main.gd" id="1_h8lw1"]
[ext_resource type="PackedScene" uid="uid://buk4hi5whq5mp" path="res://puppet/puppet.tscn" id="2_xjmcy"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_phvn7"]

[sub_resource type="LabelSettings" id="LabelSettings_qtdfm"]
font_size = 71

[node name="main" type="Node2D"]
script = ExtResource("1_h8lw1")
puppet_scene = ExtResource("2_xjmcy")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://puppet/puppet.tscn")
spawn_path = NodePath("..")

[node name="MicrophoneInput" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_phvn7")
autoplay = true
bus = &"Record"

[node name="Menu" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -92.5
offset_right = 75.0
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="SpawnPuppet" type="Button" parent="Menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Spawn Puppet"

[node name="Networking_UI" type="VBoxContainer" parent="Menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="IPInput" type="TextEdit" parent="Menu/VBoxContainer/Networking_UI"]
custom_minimum_size = Vector2(150, 38)
layout_mode = 2
placeholder_text = "IP"

[node name="PortInput" type="TextEdit" parent="Menu/VBoxContainer/Networking_UI"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
placeholder_text = "Port"

[node name="Host" type="Button" parent="Menu/VBoxContainer/Networking_UI"]
unique_name_in_owner = true
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="Menu/VBoxContainer/Networking_UI"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="NetworkStatus" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -495.0
offset_top = -276.0
offset_right = -252.0
offset_bottom = -164.0
text = "LOCAL"
label_settings = SubResource("LabelSettings_qtdfm")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MultiplayerSpawner2" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://cursor/Cursor.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="Menu/VBoxContainer/SpawnPuppet" to="." method="_on_spawn_puppet_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Networking_UI/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Networking_UI/Join" to="." method="_on_join_pressed"]
